import java.time.LocalDate
import java.time.format.DateTimeFormatter

buildscript {
	repositories {
		mavenCentral()
		maven {
			name = 'forge'
			url = 'https://maven.minecraftforge.net/'
		}
	}
	dependencies {
		classpath('com.anatawa12.forge:ForgeGradle:1.2-1.1.+') {
			changing = true
		}
	}
}

apply plugin: 'forge'

final def currentDate = LocalDate.now()
version = currentDate.format(DateTimeFormatter.ofPattern('yy.MM.dd'))
group = 'com.yourname.modid'
archivesBaseName = 'LOTR'

targetCompatibility = JavaVersion.VERSION_1_8
sourceCompatibility = JavaVersion.VERSION_1_8

minecraft {
	version = '1.7.10-10.13.4.1614-1.7.10'
	runDir = 'run'
}

jar {
	manifest {
		attributes 'FMLCorePlugin': 'lotr.common.coremod.LOTRLoadingPlugin'
		attributes 'FMLCorePluginContainsFMLMod': 'true'
	}
}